use java object layout to estimate the cache footprint